kubernetes/apps/network/traefik-internal/app/dashboard-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: network
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: internal
  rules:
  - host: traefik.${SECRET_INTERNAL_DOMAIN}
    http:
      paths:
      - backend:
          service:
            name: traefik-internal
            port:
              number: 9000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - traefik.${SECRET_INTERNAL_DOMAIN}
    secretName: traefik-dashboard-tls
